--- a/_includes/work/proj-1.html
+++ b/_includes/work/proj-1.html
@@ -1,3 +1,7 @@
+<head>
+	<meta http-equiv="Content-Security-Policy" content="connect-src 'self'">
+</head>
+
 <img src="assets/img/work/proj-1/img1.jpg" alt="Zest JS">
 
 <p style="color: #666">Zest is an e-commerce focussed web-application with methods to securely browse and purchase food from local restaurants. It is designed as a means to help restaurants reduce food wastage and to market themselves to a wider audience.</p>
