Added content security policy in the ajax call

--- a/_includes/work/proj-1.html
+++ b/_includes/work/proj-1.html
@@ -1,6 +1,6 @@
-<head>
+<!-- <head>
 	<meta http-equiv="Content-Security-Policy" content="connect-src 'self'">
-</head>
+</head> -->
 
 <img src="assets/img/work/proj-1/img1.jpg" alt="Zest JS">
 
