--- a/_includes/work/proj-4.html
+++ b/_includes/work/proj-4.html
@@ -1,6 +1,6 @@
-<head>
+<!-- <head>
 	<meta http-equiv="Content-Security-Policy" content="default-src 'self'">
-</head>
+</head> -->
 
 <p style="color: #666">I wrote this application as a research project at the University of Washington. The purpose of development was to understand how a voice based user experience should be designed for a simple task such as checking prices for a flight and that involved a lot of trial and error. I leveraged NodeJS and in order to make flight search queries, the Expedia API was used. During the testing of the application, it resided in an AWS Lambda function.  </p>
 
