--- a/_includes/work/proj-2.html
+++ b/_includes/work/proj-2.html
@@ -1,6 +1,6 @@
-<head>
+<!-- <head>
 	<meta http-equiv="Content-Security-Policy" content="connect-src 'self'">
-</head>
+</head> -->
 
 <p style="color: #666">I wrote this application as a foray into Natural Language Processing and Data Science. The purpose of the application was to gauge the sentiment of twitter users for the 2016 Presidential Election, but I also added functionality for users to search for tweets with any keyword. It is written in python and it leverages Flask, the Natural Language Toolkit and Tweepy(A module that helps establish connections to the twitter API).</p>
 
