--- a/_includes/work.html
+++ b/_includes/work.html
@@ -1,3 +1,7 @@
+<head>
+	<meta http-equiv="Content-Security-Policy" content="connect-src 'self'">
+</head>
+
 <section class="section-work">
 
   <h3 id="work">Work</h3>
