--- a/assets/css/3-sections/_work.sass
+++ b/assets/css/3-sections/_work.sass
@@ -55,7 +55,7 @@
       img
         display: block
         max-width: 100%
-        width: 240px
+        // width: 240px
         height: 154px
 
     @media screen and (max-width: 760px)
