--- a/assets/css/3-sections/_work.sass
+++ b/assets/css/3-sections/_work.sass
@@ -56,7 +56,7 @@
         display: block
         max-width: 100%
         // width: 240px
-        // height: 154px
+        height: 154px
 
     @media screen and (max-width: 760px)
       width: 50%
