--- a/_includes/work/proj-2.html
+++ b/_includes/work/proj-2.html
@@ -8,4 +8,4 @@
 	<a href="https://github.com/crikeli/Sentiment_analyser" target="_blank"><li>Git Hub Repo</li></a>
 </ul>
 
-<img src="assets/img/work/proj-2/img1.jpg" alt="Twitter Sentiment Analyser">
+<img src="{{ site.github.url }}/assets/img/work/proj-2/img1.jpg" alt="Twitter Sentiment Analyser">
