--- a/_includes/work/proj-3.html
+++ b/_includes/work/proj-3.html
@@ -8,4 +8,4 @@
 	<a href="https://github.com/crikeli/ZestiOS" target="_blank"><li>Git Hub Repo</li></a>
 </ul>
 
-<img src="assets/img/work/proj-3/img1" alt="Zest iOS" />
+<img src="{{ site.github.url }}/assets/img/work/proj-3/img1" alt="Zest iOS" />
