--- a/_includes/work/proj-4.html
+++ b/_includes/work/proj-4.html
@@ -8,4 +8,4 @@
 	<a href="https://github.com/crikeli/alexa-expedia" target="_blank"><li>Git Hub Repo</li></a>
 </ul>
 
-<img src="assets/img/work/proj-4/img1.jpg" alt="Amazon-Alexa Flight Search App" />
+<img src="{{ site.github.url }}/assets/img/work/proj-4/img1.jpg" alt="Amazon-Alexa Flight Search App" />
