--- a/_includes/work/proj-4.html
+++ b/_includes/work/proj-4.html
@@ -2,10 +2,10 @@
 	<meta http-equiv="Content-Security-Policy" content="default-src 'self'">
 </head> -->
 
-<p style="color: #666">I wrote this application as a research project at the University of Washington. The purpose of development was to understand how a voice based user experience should be designed for a simple task such as checking prices for a flight and that involved a lot of trial and error. I leveraged NodeJS and in order to make flight search queries, the Expedia API was used. During the testing of the application, it resided in an AWS Lambda function.  </p>
+<!-- <p style="color: #666">I wrote this application as a research project at the University of Washington. The purpose of development was to understand how a voice based user experience should be designed for a simple task such as checking prices for a flight and that involved a lot of trial and error. I leveraged NodeJS and in order to make flight search queries, the Expedia API was used. During the testing of the application, it resided in an AWS Lambda function.  </p>
 
 <ul style="color:#ffffff">
 	<a href="https://github.com/crikeli/alexa-expedia" target="_blank"><li>Git Hub Repo</li></a>
 </ul>
 
-<img src="{{ site.github.url }}/assets/img/work/proj-4/img1.jpg" alt="Amazon-Alexa Flight Search App" />
+<img src="{{ site.github.url }}/assets/img/work/proj-4/img1.jpg" alt="Amazon-Alexa Flight Search App" /> -->
