--- a/_includes/form.html
+++ b/_includes/form.html
@@ -1,6 +1,6 @@
 <section>
 
-  <h3>Hey! Let's Talk ;)</h3>
+  <h3>Hit Me Up!</h3>
 
 <form method="POST" action="//formspree.io/{{ site.data.settings.email }}">
 
