--- a/assets/css/2-base/_base.sass
+++ b/assets/css/2-base/_base.sass
@@ -100,7 +100,8 @@ svg
 
 h3
   @extend %small-bold
-  color: $accent-light
+  color: darken($accent-light, 20%)
+  font-size: 20px
   text-align: center
   padding: 50px 0 30px
 
@@ -117,5 +118,5 @@ section:nth-child(odd)
   background: $bgcolor
   padding-bottom: 10px
 
-  h3
-    color: darken($accent-light, 10%)
+  // h3
+  //   color: darken($accent-light, 20%)
