--- a/assets/css/2-base/_placeholders.sass
+++ b/assets/css/2-base/_placeholders.sass
@@ -1,7 +1,8 @@
 %small-bold
   font:
-    size: 20px
+    // size: 14px
     weight: 700
+    // color: darken($accent-light, 20%)
   text-transform: uppercase
 
 %background-image
