local font size different compared to deployed font size. WHY?

--- a/assets/css/2-base/_placeholders.sass
+++ b/assets/css/2-base/_placeholders.sass
@@ -1,7 +1,7 @@
 %small-bold
   font:
     // size: 14px
-    weight: 700
+    // weight: 700
     // color: darken($accent-light, 20%)
   text-transform: uppercase
 
