--- a/assets/css/2-base/_base.sass
+++ b/assets/css/2-base/_base.sass
@@ -100,9 +100,9 @@ svg
 
 h3
   @extend %small-bold
-  color: darken($accent-light, 20%)
-  font:
-    size: 20px
+  // color: darken($accent-light, 20%)
+  // font:
+    // size: 20px
   text-align: center
   padding: 50px 0 30px
 
