--- a/assets/css/2-base/_placeholders.sass
+++ b/assets/css/2-base/_placeholders.sass
@@ -2,7 +2,7 @@
   font:
     // size: 14px
     // weight: 700
-    // color: darken($accent-light, 20%)
+    color: darken($accent-light, 20%)
   text-transform: uppercase
 
 %background-image
