--- a/assets/css/2-base/_placeholders.sass
+++ b/assets/css/2-base/_placeholders.sass
@@ -1,7 +1,7 @@
 %small-bold
   font:
-    // size: 14px
-    // weight: 700
+    size: 14px
+    weight: 700
     color: darken($accent-light, 20%)
   text-transform: uppercase
 
