local font size different compared to deployed font size. WHY?

--- a/assets/css/2-base/_base.sass
+++ b/assets/css/2-base/_base.sass
@@ -100,9 +100,7 @@ svg
 
 h3
   @extend %small-bold
-  // color: darken($accent-light, 20%)
-  font:
-    size: 14px
+  color: $accent-light
   text-align: center
   padding: 50px 0 30px
 
@@ -119,5 +117,5 @@ section:nth-child(odd)
   background: $bgcolor
   padding-bottom: 10px
 
-  // h3
-  //   color: darken($accent-light, 20%)
+  h3
+    color: darken($accent-light, 20%)
