--- a/assets/css/1-tools/_icon-font.scss
+++ b/assets/css/1-tools/_icon-font.scss
@@ -9,11 +9,11 @@
 [class^="icon-"], [class*=" icon-"] {
   font-family: "icomoon";
   line-height: 1;
-  
+
   /* Add 1px margin-top to center the icon */
   display: block;
   margin-top: 1px;
-  
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -30,3 +30,4 @@
 .icon-behance:before     { content: "\e607"; }
 .icon-soundcloud:before  { content: "\e606"; }
 .icon-vine:before        { content: "\e60a"; }
+.icon-location:before    { content: "\e947"; }
