--- a/assets/css/2-base/_base.sass
+++ b/assets/css/2-base/_base.sass
@@ -88,7 +88,7 @@ body
   ------------------------------------	*/
 body
   background: $documentBackgroundColor
-  font-size: 14px
+  // font-size: 14px
   line-height: 1.6
   font-family: 'Open Sans', sans-serif
   color: $textColor
@@ -100,7 +100,8 @@ svg
 
 h3
   @extend %small-bold
-  color: $accent-light
+  font-size: 22px
+  color: darken($accent-light, 20%)
   text-align: center
   padding: 50px 0 30px
 
