--- a/assets/css/2-base/_base.sass
+++ b/assets/css/2-base/_base.sass
@@ -114,9 +114,9 @@ fieldset
   h3
     padding: 50px 0 50px
 
-section:nth-child(odd)
-  background: $bgcolor
-  padding-bottom: 10px
+// section:nth-child(odd)
+//   background: $bgcolor
+//   padding-bottom: 10px
 
-  h3
+  // h3
     color: darken($accent-light, 20%)
