Color scheme matching

--- a/assets/css/3-sections/_work.sass
+++ b/assets/css/3-sections/_work.sass
@@ -115,7 +115,7 @@
     +position(absolute, -4px null null -60px)
 
     path
-      fill: rgba(0,0,0,0.4)
+      fill: rgb(201,144,101)
 
     &:hover
       opacity: 1
