--- a/assets/css/1-tools/_icon-font.scss
+++ b/assets/css/1-tools/_icon-font.scss
@@ -31,3 +31,4 @@
 .icon-soundcloud:before  { content: "\e606"; }
 .icon-vine:before        { content: "\e60a"; }
 .icon-location:before    { content: "\e947"; }
+.icon-feed:before        { content: "\e91d"; }
