Added my updated resume to download

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -10,7 +10,8 @@
   </div>
 
   <hr class="bar">
-
+  <a class="resumelink" href="https://github.com/crikeli/crikeli.github.io/Resume_Kelin_Christi.pdf" target="_blank"> My Resume </a>
+  <br>
   <a class="biglink" href="mailto:{{ site.data.settings.email }}">{{ site.data.settings.email }}</a>
 
 </section>
