--- a/assets/css/3-sections/_contact.sass
+++ b/assets/css/3-sections/_contact.sass
@@ -49,3 +49,12 @@
   line-height: 1
   width: 90%
   margin: 0 auto
+
+.resumelink
+  display: inline-block
+  font:
+    size: 40px
+    weight: 300
+  line-height: 2.5
+  width: 90%
+  margin: 0 auto
