Updated the download link and some layout changes

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,9 +9,9 @@
     {% endfor %}
   </div>
 
+  <a class="resumelink" href="/Resume_Kelin_Christi.pdf" download="Resume_KelinChristi.pdf" target="_blank"> Download my Resume </a>
   <hr class="bar">
-  <a class="resumelink" href="https://github.com/crikeli/crikeli.github.io/Resume_Kelin_Christi.pdf" target="_blank"> My Resume </a>
-  <br>
+
   <a class="biglink" href="mailto:{{ site.data.settings.email }}">{{ site.data.settings.email }}</a>
 
 </section>
