--- a/assets/css/3-sections/_contact.sass
+++ b/assets/css/3-sections/_contact.sass
@@ -4,6 +4,7 @@
 .social-links
   max-width: 700px
   margin: 0px auto 50px
+  margin-bottom: 15px
   +display(flex)
   +justify-content(space-around)
   +flex-wrap(wrap)
@@ -36,7 +37,7 @@
       opacity: 0
 
 .bar
-  width: 250px
+  width: 500px
   height: 0px
   border-top: 4px solid $accent
   margin: 0px auto 50px
@@ -44,7 +45,7 @@
 .biglink
   display: inline-block
   font:
-    size: 72px
+    size: 68px
     weight: 300
   line-height: 1
   width: 90%
@@ -55,6 +56,7 @@
   font:
     size: 40px
     weight: 300
-  line-height: 2.5
+  line-height: 1.5
   width: 90%
   margin: 0 auto
+  margin-bottom: 25px
