--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,9 +9,12 @@
     {% endfor %}
   </div>
 
-  <a class="resumelink" href="/Resume_Kelin_Christi.pdf" download="Resume_KelinChristi.pdf" target="_blank"> Download my Resume </a>
+  <a class="smallink" href="/Resume_Kelin_Christi.pdf" download="Resume_KelinChristi.pdf" target="_blank"> My Résumé </a>
+
   <hr class="bar">
 
   <a class="biglink" href="mailto:{{ site.data.settings.email }}">{{ site.data.settings.email }}</a>
+
+  <!-- <a class="smallink" href="/Resume_Kelin_Christi.pdf" download="Resume_KelinChristi.pdf" target="_blank"> Résumé </a> -->
 
 </section>
