--- a/assets/css/3-sections/_contact.sass
+++ b/assets/css/3-sections/_contact.sass
@@ -36,27 +36,28 @@
       +transform(scale(1.5))
       opacity: 0
 
-.bar
-  width: 500px
-  height: 0px
-  border-top: 4px solid $accent
-  margin: 0px auto 50px
-
-.biglink
-  display: inline-block
-  font:
-    size: 68px
-    weight: 300
-  line-height: 1
-  width: 90%
-  margin: 0 auto
-
-.resumelink
+.smallink
   display: inline-block
   font:
     size: 40px
     weight: 300
-  line-height: 1.5
-  width: 90%
+  line-height: 1
+  // width: 90%
   margin: 0 auto
   margin-bottom: 25px
+
+.bar
+  width: 250px
+  height: 0px
+  border-top: 4px solid $accent
+  margin: 0px auto 50px
+  // margin-top: 40px
+
+.biglink
+  display: inline-block
+  font:
+    size: 60px
+    weight: 300
+  line-height: 1
+  // width: 90%
+  margin: 0 auto
