--- a/_includes/work.html
+++ b/_includes/work.html
@@ -31,7 +31,7 @@
       </label>
       <h4 class="project-title"></h4>
       <div class="project-load">
-        <link rel="stylesheet" href="{{ site.github.url }}/assets/css/style.css">
+        <link rel="stylesheet" href="{{ site.github.url }}/assets/css/all.css">
       </div>
 
       <noscript>
