--- a/_includes/work.html
+++ b/_includes/work.html
@@ -30,9 +30,7 @@
         <div class="work-return">{% include icons/icon-back.html %}</div>
       </label>
       <h4 class="project-title"></h4>
-      <div class="project-load">
-        <link rel="stylesheet" href="{{ site.github.url }}/assets/css/all.css">
-      </div>
+      <div class="project-load"></div>
 
       <noscript>
         {% for project in site.data.settings.projects %}
