--- a/_includes/work/proj-3.html
+++ b/_includes/work/proj-3.html
@@ -1,7 +1,9 @@
-<p style="color: #666">Zest iOS is the mobile implementation of the web-application. I worked with several apple frameworks and Cocoapods whilst designing a pixel perfect UI. I also utilized the Moltin API to manage the back-end of my app and I plan to launch the app very soon.</p>
+<!-- <p style="color: #666">Zest iOS is the mobile implementation of the web-application. I worked with several apple frameworks and Cocoapods whilst designing a pixel perfect UI. I also utilized the Moltin API to manage the back-end of my app and I plan to launch the app very soon.</p>
 
 <ul style="color:#ffffff">
 	<a href="https://github.com/crikeli/ZestiOS" target="_blank"><li>Git Hub Repo</li></a>
 </ul>
 
-<img src="{{ site.github.url }}/assets/img/work/proj-3/img1" alt="Zest iOS" />
+<img src="{{ site.github.url }}/assets/img/work/proj-3/img1" alt="Zest iOS" /> -->
+
+<link rel="stylesheet" href="{{ site.github.url }}/assets/css/all.css">
