--- a/_includes/work/proj-4.html
+++ b/_includes/work/proj-4.html
@@ -9,3 +9,5 @@
 </ul>
 
 <img src="{{ site.github.url }}/assets/img/work/proj-4/img1.jpg" alt="Amazon-Alexa Flight Search App" /> -->
+
+<link rel="stylesheet" href="{{ site.github.url }}/assets/css/all.css">
