Experimenting changes with md & html to reference css

--- a/_includes/work/proj-1.html
+++ b/_includes/work/proj-1.html
@@ -4,4 +4,4 @@
 
 <a href="{{GitHub Repository}}" class="icon-{{ 'github' }}" target="_blank"></a> -->
 
-<link rel="stylesheet" href="{{ site.github.url }}/assets/css/all.css">
+<!-- <link rel="stylesheet" href="{{ site.github.url }}/assets/css/all.css"> -->
