last commit for the night

--- a/_includes/work/proj-2.html
+++ b/_includes/work/proj-2.html
@@ -1,8 +1,11 @@
-<!-- <p style="color: #666">I wrote this application as a foray into Natural Language Processing and Data Science. The purpose of the application was to gauge the sentiment of twitter users for the 2016 Presidential Election, but I also added functionality for users to search for tweets with any keyword. It is written in python and it leverages Flask, the Natural Language Toolkit and Tweepy(A module that helps establish connections to the twitter API).</p>
+<h5 id="its-no-secret-that-the-2016-election-was-a-highly-contentious-one-and-there-was-no-place-quite-like-twitter-where-people-would-voice-their-opinions-that-prompted-me-to-write-an-application-that-analyzed-the-sentiment-of-tweets-and-categorized-them-as-positive-negative-or-neutral">It’s no secret that the 2016 Election was a highly contentious one, and there was no place quite like twitter where people would voice their opinions. That prompted me to write an application that analyzed the sentiment of tweets and categorized them as positive, negative or neutral.</h5>
 
-<ul style="color:#ffffff">
-	<a href="https://github.com/crikeli/Sentiment_analyser" target="_blank"><li>Git Hub Repo</li></a>
-</ul>
+<p>I wrote the application as a foray into Natural Language Processing and Data Science. The purpose of the application was to gauge the sentiment of twitter users for the 2016 Presidential Election. I also added functionality for users to search for tweets with any keyword. It is written in Python and it leverages Flask, the Natural Language Toolkit(NLTK) and Tweepy(A module that helps establish connections to the twitter API) and JQuery.</p>
 
-<img src="{{ site.github.url }}/assets/img/work/proj-2/img1.jpg" alt="Twitter Sentiment Analyser"> -->
-<link rel="stylesheet" href="{{ site.github.url }}/assets/css/all.css">
+<h5 id="below-is-a-screenshot-of-the-application-in-action-reds-are-negative-tweets-greens-are-positive-and-yellows-are-neutral">Below is a screenshot of the application in action. (Reds are negative tweets, greens are positive and yellows are neutral)</h5>
+
+<p><img src="/assets/img/work/proj-2/img1.jpg" alt="Twitter Sentiment Analyser" /></p>
+
+<p><a href="https://salty-beach-83386.herokuapp.com/" style="font-size:20px" target="_blank"> Live-Site </a></p>
+
+<p><a href="https://github.com/crikeli/Sentiment_analyser" class="icon-github" style="font-size:22px" target="_blank"> Code </a></p>
