--- a/_includes/work/proj-3.html
+++ b/_includes/work/proj-3.html
@@ -1,9 +1,15 @@
-<!-- <p style="color: #666">Zest iOS is the mobile implementation of the web-application. I worked with several apple frameworks and Cocoapods whilst designing a pixel perfect UI. I also utilized the Moltin API to manage the back-end of my app and I plan to launch the app very soon.</p>
 
-<ul style="color:#ffffff">
-	<a href="https://github.com/crikeli/ZestiOS" target="_blank"><li>Git Hub Repo</li></a>
-</ul>
+<h5 id="as-part-of-the-ios-course-during-my-education-at-coding-dojo-i-designed-and-developed-an-ios-application-that-could-potentially-aid-small-restaurants-in-minimizing-food-wastage-and-increasing-their-customer-base">As part of the iOS course during my education at Coding Dojo, I designed and developed an iOS application that could potentially aid small restaurants in minimizing food wastage and increasing their customer base.</h5>
 
-<img src="{{ site.github.url }}/assets/img/work/proj-3/img1" alt="Zest iOS" /> -->
+<p>Zest iOS is the mobile implementation of the web-application ZestJS. During the development of the app, I worked with several Apple frameworks like Map-Kit, Core-Location and Cocoapods whilst designing a pixel perfect UI. I also utilized the <a href="https://moltin.com/" target="_blank"> Moltin API </a> (which is a back-end as a service that supports secure E-commerce). I have yet to develop an onboarding feature for the app, however, the majority of the application is developed and fully functional.</p>
 
-<link rel="stylesheet" href="{{ site.github.url }}/assets/css/all.css">
+<h5 id="below-are-some-screenshots-of-the-application-in-action">Below are some screenshots of the application in action.</h5>
+
+<p><img src="/assets/img/work/proj-3/img1.jpg" alt="Zest iOS" />
+<img src="/assets/img/work/proj-3/img2.jpg" alt="Zest iOS" />
+<img src="/assets/img/work/proj-3/img3.jpg" alt="Zest iOS" />
+<img src="/assets/img/work/proj-3/img4.jpg" alt="Zest iOS" />
+<img src="/assets/img/work/proj-3/img5.jpg" alt="Zest iOS" />
+<img src="/assets/img/work/proj-3/img6.jpg" alt="Zest iOS" /></p>
+
+<p><a href="https://github.com/crikeli/ZestiOS" class="icon-github" style="font-size:22px" target="_blank"> Code </a></p>
