--- a/_includes/work/proj-1.html
+++ b/_includes/work/proj-1.html
@@ -1,4 +1,4 @@
-<h5 id="i-undertook-this-project-as-my-very-first-full-end-to-end-project-after-i-had-just-finished-the-meanmongo-express-angular-nodejs-stack-at-coding-dojo-i-wanted-to-apply-my-newly-learnt-web-development-knowledge-to-create-a-practical-real-world-application">I undertook this project as my very first full “end-to-end” project after I had just finished the MEAN(Mongo, Express, Angular, NodeJS) stack at Coding Dojo. I wanted to apply my newly learnt web development knowledge to create a practical, real-world application.</h5>
+<!-- <h5 id="i-undertook-this-project-as-my-very-first-full-end-to-end-project-after-i-had-just-finished-the-meanmongo-express-angular-nodejs-stack-at-coding-dojo-i-wanted-to-apply-my-newly-learnt-web-development-knowledge-to-create-a-practical-real-world-application">I undertook this project as my very first full “end-to-end” project after I had just finished the MEAN(Mongo, Express, Angular, NodeJS) stack at Coding Dojo. I wanted to apply my newly learnt web development knowledge to create a practical, real-world application.</h5>
 
 <p>Zest is an e-commerce web-application with methods to securely browse and purchase food from local restaurants. It is designed as a means to help restaurants reduce food wastage and to market themselves to a wider audience.</p>
 
@@ -12,6 +12,25 @@
 
 <p><a href="https://zest.stamplayapp.com" style="font-size:20px" target="_blank"> Live-Site </a></p>
 
-<p><a href="https://github.com/crikeli/ZestJS" class="icon-github" style="font-size:22px" target="_blank"> Code </a></p>
+<p><a href="https://github.com/crikeli/ZestJS" class="icon-github" style="font-size:22px" target="_blank"> Code </a></p> -->
 
-<!-- <link rel="stylesheet" href="{{ site.github.url }}/assets/css/all.css">
+
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <!-- <title>Zest JS</title> -->
+    <link rel="stylesheet" href="{{ site.github.url }}/assets/css/all.css">
+  </head>
+  <body>
+    <img src="{{ site.github.url }}/assets/img/work/proj-1/img1.jpg" alt="Typo International">
+
+    <p>TYPO: International Design Talks is an annual event held in Berlin, London, and San Francisco. This promotional project is developed to market the event for the designindustry. The use of patterns, sophisticated color scheme and typography are applied for the print and mobile application.</p>
+
+    <img src="{{ site.github.url }}/assets/img/work/proj-1/img2.jpg" alt="Typo International">
+    <img src="{{ site.github.url }}/assets/img/work/proj-1/img3.jpg" alt="Typo International">
+    <img src="{{ site.github.url }}/assets/img/work/proj-1/img4.jpg" alt="Typo International">
+    <img src="{{ site.github.url }}/assets/img/work/proj-1/img5.jpg" alt="Typo International">
+  </body>
+</html>
