--- a/_includes/work.html
+++ b/_includes/work.html
@@ -1,50 +1,59 @@
-<section class="section-work">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="{{ site.github.url }}/assets/css/all.css">
+  </head>
+  <body>
+    <section class="section-work">
 
-  <h3 id="work">Work</h3>
-  {% for project in site.data.settings.projects %}
-    <input type="radio" name="trigger" class="trigger" id="{{ project.folder }}" />
-  {% endfor %}
-
-  <input type="radio" name="trigger" id="return" class="return" />
-
-  <div class="work-belt">
-
-    <div class="thumb-wrap">
-      <div class="thumb-container">
+      <h3 id="work">Work</h3>
       {% for project in site.data.settings.projects %}
-      <label for="{{ project.folder }}">
-        <div class="thumb-unit" data-url="{{ site.github.url }}/work/{{ project.folder }}/">
-          <img src="{{ site.github.url }}/assets/img/work/{{project.folder}}/thumb.jpg" alt="{{ project.name }}" />
-        </div>
-        <div class="thumb-overlay">
-          <strong>{{ project.name }}</strong>
-        </div>
-      </label>
+        <input type="radio" name="trigger" class="trigger" id="{{ project.folder }}" />
       {% endfor %}
-    </div>
-    </div>
 
-    <div class="work-wrap">
-      <div class="work-container">
-      <label for="return">
-        <div class="work-return">{% include icons/icon-back.html %}</div>
-      </label>
-      <h4 class="project-title"></h4>
-      <div class="project-load"></div>
+      <input type="radio" name="trigger" id="return" class="return" />
 
-      <noscript>
-        {% for project in site.data.settings.projects %}
-          <div class="noscript" id="content-{{ project.folder }}">
-            <h4 class="project-title">{{ project.name }}</h4>
-            <div class="noscript-load">
-              {% include {{project.file}} %}
+      <div class="work-belt">
+
+        <div class="thumb-wrap">
+          <div class="thumb-container">
+          {% for project in site.data.settings.projects %}
+          <label for="{{ project.folder }}">
+            <div class="thumb-unit" data-url="{{ site.github.url }}/work/{{ project.folder }}/">
+              <img src="{{ site.github.url }}/assets/img/work/{{project.folder}}/thumb.jpg" alt="{{ project.name }}" />
             </div>
-          </div>
-        {% endfor %}
-      </noscript>
+            <div class="thumb-overlay">
+              <strong>{{ project.name }}</strong>
+            </div>
+          </label>
+          {% endfor %}
+        </div>
+        </div>
 
-    </div>
-    </div>
-  </div>
+        <div class="work-wrap">
+          <div class="work-container">
+          <label for="return">
+            <div class="work-return">{% include icons/icon-back.html %}</div>
+          </label>
+          <h4 class="project-title"></h4>
+          <div class="project-load"></div>
 
-</section>
+          <noscript>
+            {% for project in site.data.settings.projects %}
+              <div class="noscript" id="content-{{ project.folder }}">
+                <h4 class="project-title">{{ project.name }}</h4>
+                <div class="noscript-load">
+                  {% include {{project.file}} %}
+                </div>
+              </div>
+            {% endfor %}
+          </noscript>
+
+        </div>
+        </div>
+      </div>
+
+    </section>
+  </body>
+</html>
