--- a/_includes/work.html
+++ b/_includes/work.html
@@ -30,16 +30,17 @@
         <div class="work-return">{% include icons/icon-back.html %}</div>
       </label>
       <h4 class="project-title"></h4>
-      <!DOCTYPE html>
-      <html>
-        <head>
-          <meta charset="utf-8">
-          <link rel="stylesheet" href="{{ site.github.url }}/assets/css/all.css">
-        </head>
-        <body>
-          <div class="project-load"></div>
-        </body>
-      </html>
+      <div class="project-load">
+        <!DOCTYPE html>
+        <html>
+          <head>
+            <meta charset="utf-8">
+            <link rel="stylesheet" href="{{ site.github.url }}/assets/css/all.css">
+          </head>
+          <body>  
+          </body>
+        </html>
+      </div>
 
       <noscript>
         {% for project in site.data.settings.projects %}
